# weather-discord

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml  weather-discord.code-workspace  weather-discord.service  weather-discord.timer
src/weather_discord/: __init__.py  api.py  config.py  entrypoint.py  schema.py
